Добавление базы данных и новый репозиторий для работы с данными из базы. Также добавлено две модели - Mpa (рейтинг фильма) и Genre (жанр фильма).