@@ -6,18 +6,19 @@ import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.storage.FilmStorage;
-import ru.yandex.practicum.filmorate.storage.UserStorage;
+import ru.yandex.practicum.filmorate.repository.FilmStorage;
+import ru.yandex.practicum.filmorate.repository.UserStorage;
 import ru.yandex.practicum.filmorate.validation.FilmValidator;
 import ru.yandex.practicum.filmorate.validation.LikeValidator;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class FilmService {
+    public static final String FILM_NOT_FOUND = "Фильм с ID = %d не найден";
+
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
 
@@ -28,6 +29,7 @@ public class FilmService {
 
     public Film createFilm(Film film) {
         log.info("Запрос создания фильма: {}", film);
+
         FilmValidator.validate(film);
         filmStorage.addFilm(film);
 
@@ -36,7 +38,7 @@ public class FilmService {
     }
 
     public Film updateFilm(Film film) {
-        log.info("Запрос обновления фильма: {}", film);
+        log.info("Запрос обновления фил ьма: {}", film);
 
         if (film.getId() == null) {
             log.warn("Ошибка при обновлении фильма: не указан ID");
@@ -44,11 +46,11 @@ public class FilmService {
         }
 
         if (filmStorage.doesFilmNotExist(film.getId())) {
-            log.warn((String.format("Фильм с ID = %d не найден", film.getId())));
-            throw new NotFoundException(String.format("Фильм с ID = %d не найден", film.getId()));
+            log.warn((String.format(FILM_NOT_FOUND, film.getId())));
+            throw new NotFoundException(String.format(FILM_NOT_FOUND, film.getId()));
         }
 
-        FilmValidator.validate(film);
+        FilmValidator.validateForUpdate(film);
         filmStorage.updateFilm(film);
         log.info("Фильм с ID: {} успешно обновлен", film.getId());
         return film;
@@ -57,8 +59,8 @@ public class FilmService {
     public Film getFilmById(Long filmId) {
         log.info("Запрос получения фильма по ID: {}", filmId);
         if (filmStorage.doesFilmNotExist(filmId)) {
-            log.warn((String.format("Фильм с ID = %d не найден", filmId)));
-            throw new NotFoundException(String.format("Фильм с ID = %d не найден", filmId));
+            log.warn((String.format(FILM_NOT_FOUND, filmId)));
+            throw new NotFoundException(String.format(FILM_NOT_FOUND, filmId));
         }
         return filmStorage.getFilmById(filmId);
     }
@@ -66,6 +68,7 @@ public class FilmService {
     public Film likeTheFilm(Long filmId, Long userId) {
         log.info("Запрос на лайк фильму = {}, от пользователя = {}", filmId, userId);
         LikeValidator.validate(filmId, userId, userStorage, filmStorage);
+        filmStorage.addLike(filmId, userId);
         Film film = filmStorage.getFilmById(filmId);
         film.addLike(userId);
         log.info("Лайк поставлен");
@@ -81,7 +84,7 @@ public class FilmService {
             log.warn("Пользователь {} не ставил лайк фильму {}", userId, filmId);
             throw new ValidationException("Лайк не найден");
         }
-
+        filmStorage.deleteLike(filmId, userId);
         film.deleteLike(userId);
         log.info("Лайк удалён");
         return film;
@@ -95,7 +98,7 @@ public class FilmService {
                         Integer.compare(f2.getLikes().size(),
                                 f1.getLikes().size()))
                 .limit(count > 0 ? count : 10)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
 
